--- a/07-GoogleFontDemo/Unsolved/style.css
+++ b/07-GoogleFontDemo/Unsolved/style.css
@@ -3,3 +3,20 @@
  **/
 
 /* Add in the Google Fonts of your choice */
+
+.thought1 {
+  font-family: "Bebas Neue";
+  color: blue;
+}
+
+.thought2 {
+  font-family: "Comforter Brush";
+  font-weight: none;
+  font-size: 1.5em;
+}
+
+.thought3 {
+  font-family: "Oswald";
+  color: purple;
+  font-size: 20px;
+}
