--- a/Bootstrap Project/JsAssignment.css
+++ b/Bootstrap Project/JsAssignment.css
@@ -2,3 +2,15 @@
   border-style: dashed;
   color: yellow;
 }
+
+#box1 {
+  background-color: red;
+}
+
+#box2 {
+  background-color: blue;
+}
+
+#box3 {
+  background-color: green;
+}
